--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -241,7 +241,7 @@ body {
             }
         }
 
-        &.-user-info {
+        &.is-user-info {
             justify-self: flex-start;
             margin-bottom: auto;
             padding: 0 80px 40px 40px;
@@ -282,6 +282,7 @@ form {
     background-color: $color-white;
     border-radius: 15px;
     box-shadow: 0 0 63px -26px rgba($color-black, 0.56);
+    box-sizing: border-box;
     margin: 10px;
     padding: 30px;
     width: 450px;
@@ -454,7 +455,7 @@ form {
     text-align: center;
     width: 100%;
 
-    &.-small {
+    &.is-small {
         padding: 10px 15px;
         width: 40px;
     }
@@ -469,6 +470,7 @@ form {
         background-color: $color-white;
         border-radius: 15px;
         box-shadow: 0 0 63px -26px rgba($color-black, 0.56);
+        box-sizing: border-box;
         list-style: none;
         margin: 10px;
         padding: 30px;
@@ -491,6 +493,7 @@ form {
         }
 
         &-text {
+            cursor: pointer;
             padding: 0 15px;
             text-align: left;
             width: 100%;
